# django-citext

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  linter-requirements.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
citext/: __init__.py  apps.py  baker_generators.py  fields.py  lookups.py  operations.py
tests/: test_baker_generators.py  test_lookups.py
tests/testapp/: apps.py  models.py  settings.py
tests/testapp/migrations/: 0001_initial.py
